added more routes to swagger.json
